# voxpost

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  report_speech_check_cases_snippet.txt  voxpost.toml.example
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: model_benchmark.yml  multilingual_fixture.yml
.github/workflows/: docs.yml
docs/: BLOCK_1_GMAIL_EVENTS.md  BLOCK_3_MODELS.md  BLOCK_3_SUMMARIZE.md  BLOCK_4_TTS.md  GMAIL_EVENTS_RESEARCH.md  MODEL_LEADERBOARD.md  README.md  RUNTIME.md  SETUP.md  TODO.md  index.md  prompt-engineering-brief.md  voxpost-prompt-design.md
docs/contributing/: MODEL_REVIEW_PROMPT.md  SPEECH_CHECK_CONFIG.md
docs/getting-started/: overview.md
scripts/: _legacy_speech_check_cases.py  check-no-secrets.sh  export_speech_fixtures.py
tests/: __init__.py  fixture_bodies.py  test_attachments.py  test_config.py  test_console.py  test_email_clean.py  test_email_entities.py  test_events.py  test_history.py  test_listen_idle_unload.py  test_listen_speak.py  test_message_body.py  test_ollama_summarize.py  test_resource_check_runner.py  test_resource_monitor.py  test_speakable_fallback.py  test_speakable_numbers.py  test_speakable_polish.py  test_speakable_spam_gate.py  test_speech_check_cases.py  test_speech_check_grading.py  test_speech_check_parallel.py  test_speech_check_report.py  test_speech_langs.py  test_state.py  test_summarize.py  test_summarize_pipeline.py  test_summarize_runtime.py  test_summarizer_context.py  test_tts.py  test_user_config.py
(+70 files in other folders)
