[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxpost"
version = "0.1.0"
description = "Local Gmail event daemon — hear what arrived without opening another tab"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Voxpost contributors" }]
dependencies = [
    "click>=8.1",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "google-cloud-pubsub>=2.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "transformers>=4.37",
    "torch>=2.0",
    "torchvision>=0.15",
    "pillow>=10",
    "sentencepiece>=0.2",
    "huggingface-hub>=0.20",
    "protobuf>=4.25",
    "psutil>=5.9",
    "supertonic>=1.3",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "numpy>=1.26",
]
summarize = [
    "transformers>=4.37",
    "torch>=2.0",
    "torchvision>=0.15",
    "pillow>=10",
    "sentencepiece>=0.2",
    "huggingface-hub>=0.20",
    "protobuf>=4.25",
    "psutil>=5.9",
]
tts = [
    "supertonic>=1.3",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "numpy>=1.26",
]

[project.scripts]
voxpost = "voxpost.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: runs the real local summarizer model (voxpost summarize speech-check)",
    "resource: runs live CPU/RAM monitoring against a local summarizer model",
]
